# Hexxagon

./: CMakeLists.txt  README.md  main.cpp
Board/: Board.cpp  Board.h
Bot/: Bot.cpp  Bot.h
Dialogs/: EndGame.cpp  EndGame.h  LeaderBoard.cpp  LeaderBoard.h  SaveLoadDialog.cpp  SaveLoadDialog.h
MainWindow/: MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  SFML_Board.cpp  SFML_Board.h
